[package]
name = "doge_dns"
version = "0.2.4-beta"
description = "The dns interaction component of the [doge](https://github.com/Dj-Codeman/doge) package"
homepage = "https://github.com/Dj-Codeman/doge"
repository = "https://github.com/Dj-Codeman/doge"
license = "MIT"
authors = ["Darrion Whitfield <dwhitfield@ramfield.net>"]
edition = "2018"

[lib]
doctest = false


[dependencies]

# logging
log = "0.4"

# protocol parsing helper
byteorder = "1.3"

# printing of certain packets
base64 = "0.21"

# idna encoding
unic-idna = { version = "0.9.0", optional = true }

# mutation testing

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []  # idna is enabled in the main dog crate
with_idna = ["unic-idna"]
